# strata-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  strata.doxyfile  vcpkg.json
Benchmarks/: LayerBenchmarks.cpp
Tests/: LayerStateTests.cpp  LayerUsageTests.cpp  LayerUtilTests.cpp
include/: strata.h
